manifest/rhm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhm-app-deployment
  namespace: kgirs
  labels:
    app: rhm-app
spec:
  replicas: 1  # Number of replicas/instances you want to run
  selector:
    matchLabels:
      app: rhm-app
  template:
    metadata:
      labels:
        app: rhm-app
    spec:
      containers:
        - name: rhm-app-container
          image: bespoque/rhm:prod-1.4-%%VERSION%% # Replace this with the URL of your Node.js application Docker image
          imagePullPolicy: Always
          ports:
            - containerPort: 3000  # Replace this with the port on which your Node.js application listens.
