manifest/rhm-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhm-app-ingress
#  namespace: kgirs
  annotations:
    # Add any necessary annotations here (e.g., for load balancer, SSL termination, etc.)
spec:
  # Replace 'example.com' with your actual domain or hostname
  rules:
    - host: %%URL%%
      http:
        paths:
          # Replace '/node-app' with the base path of your Node.js application
          - path: /
            pathType: Prefix
            backend:
              # Replace 'node-app-service' with the name of your Node.js application's Service
              service:
                name: rhm-app-service
                port:
                  # Replace '80' with the port on which your Node.js application is running
                  number: 80
